# bca-rust

./: .gitignore  Cargo.toml  Makefile  README.md  req-headers.txt
src/: accounts.rs  client.rs  clients.rs  cookies.rs  main.rs  saldo_parser.rs  states.rs
src/events/: event.rs
src/resp_parser/: mod.rs  mutasi_parser.rs  resp_traits.rs  saldo_parser.rs
src/states/: mod.rs  states.rs
src/ui/: ui.rs
