[package]
name = "bca-rust"
version = "0.1.0"
authors = ["winwisely268 <winwisely268@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
anyhow = "^1.0"
scraper = "^0.12"
http = "^0.2"
url = "^2"
chrono = "^0.4"
regex = "^1"

[dependencies.isahc]
version = "^0.9"
features = ["middleware-api-preview"]

[dependencies.async-std]
version = "^1"
features = ["attributes"]

[dependencies.tracing]
version = "0.1.14"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.2.5"
